--- a/MvcMovie/src/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/src/MvcMovie/Views/Movies/Index.cshtml
@@ -1,5 +1,7 @@
 @model MovieGenreViewModel
 @using System.Security.Claims;
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
 
 @{
 	ViewData["Title"] = "Index";
@@ -16,6 +18,11 @@ else
 	  u => u.IsAuthenticated &&
 	  u.HasClaim(c => c.Type == ClaimTypes.Name)).FindFirst(ClaimTypes.Name).Value
 	</h1>
+}
+
+@if (await AuthorizationService.AuthorizeAsync(User, "AdminOnly"))
+{
+	<p>This paragraph is displayed because you fulfilled PolicyName.</p>
 }
 
 <h2>Index</h2>
