--- a/MvcMovie/src/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/src/MvcMovie/Views/Movies/Index.cshtml
@@ -20,16 +20,16 @@ else
 	</h1>
 }
 
-@if (await AuthorizationService.AuthorizeAsync(User, "AdminOnly"))
-{
-	<p>This paragraph is displayed because you fulfilled PolicyName.</p>
-}
+
 
 <h2>Index</h2>
 
-<p>
-	<a asp-action="Create">Create New</a>
-</p>
+@if (await AuthorizationService.AuthorizeAsync(User, "AdminOnly"))
+{
+	<p>
+		<a asp-action="Create">Create New</a>
+	</p>
+}
 
 <form asp-controller="Movies" asp-action="Index" method="get">
 	<p>
@@ -75,9 +75,16 @@ else
 					@Html.DisplayFor(modelItem => item.Title)
 				</td>
 				<td>
-					<a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-					<a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-					<a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+					@if (await AuthorizationService.AuthorizeAsync(User, "AdminOnly"))
+					{
+						<text><a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+							<a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+							<a asp-action="Delete" asp-route-id="@item.ID">Delete</a></text>
+					} else
+					{
+
+						<text><a asp-action="Details" asp-route-id="@item.ID">Details</a></text>
+					}
 				</td>
 			</tr>
 		}
